# ec-ariel

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MUJOCO_LOG.TXT  README.md  mypy.ini  noxfile.py  pyproject.toml  pyrightconfig.json  ruff.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/dotfiles/: .zshrc  auto-update-omz-plugins.sh
.devcontainer/scripts/: mypy-missing-types.sh  postCreateCommand.sh  update.sh
.github/workflows/: constraints.txt  documentation.yml  labeler.yml  release.yml  sphinx.yml  tests.yml
.typings/astropy/: version.pyi
.typings/astropy/config/: __init__.pyi  configuration.pyi  paths.pyi
.typings/astropy/constants/: codata2014.pyi  codata2018.pyi  config.pyi  constant.pyi
.typings/astropy/convolution/: __init__.pyi  core.pyi  kernels.pyi  utils.pyi
.typings/astropy/coordinates/: distances.pyi  earth_orientation.pyi  matching.pyi  matrix_utilities.pyi  polarization.pyi  sites.pyi  spectral_coordinate.pyi  spectral_quantity.pyi
.typings/astropy/cosmology/: _utils.pyi  connect.pyi  parameters.pyi  realizations.pyi  units.pyi
.typings/astropy/modeling/: __init__.pyi  convolution.pyi  functional_models.pyi  mappings.pyi  parameters.pyi  polynomial.pyi  powerlaws.pyi  separable.pyi  utils.pyi
.typings/astropy/nddata/: __init__.pyi  decorators.pyi  flag_collection.pyi  nddata_base.pyi
.typings/astropy/samp/: __init__.pyi  constants.pyi  hub.pyi  hub_proxy.pyi  hub_script.pyi  standard_profile.pyi  utils.pyi  web_profile.pyi
.typings/astropy/stats/: bayesian_blocks.pyi  jackknife.pyi  nanfunctions.pyi  sigma_clipping.pyi
.typings/astropy/table/: __init__.pyi  _column_mixins.pyi  column.pyi  info.pyi  np_utils.pyi  operations.pyi  pandas.pyi
.typings/astropy/time/: __init__.pyi  setup_package.pyi  utils.pyi
.typings/astropy/timeseries/: core.pyi  downsample.pyi  sampled.pyi
.typings/astropy/uncertainty/: distributions.pyi
.typings/astropy/units/: __init__.pyi  astrophys.pyi  cgs.pyi  errors.pyi  imperial.pyi  required_by_vounit.pyi
.typings/astropy/utils/: __init__.pyi  data.pyi  introspection.pyi  misc.pyi  parsing.pyi  setup_package.pyi  shapes.pyi  state.pyi
.typings/astropy/visualization/: __init__.pyi  basic_rgb.pyi  hist.pyi  interval.pyi  time.pyi  transform.pyi  units.pyi
.typings/astropy/wcs/: __init__.pyi  _wcs.pyi  utils.pyi
.typings/cmaes/: _catcma.pyi  _cma.pyi  _cmawm.pyi  _dxnesic.pyi  _sepcma.pyi  _xnes.pyi
.typings/mujoco/: __init__.pyi  _callbacks.pyi  _enums.pyi  _functions.pyi  _structs.pyi  gl_context.pyi  minimize.pyi  minimize_test.pyi  msh2obj.pyi  render_test.pyi  renderer.pyi  rollout.pyi  viewer.pyi
.typings/mujoco/egl/: __init__.pyi
.typings/mujoco/glfw/: __init__.pyi
.typings/mujoco/introspect/: ast_nodes.pyi
.typings/mujoco/osmesa/: __init__.pyi
.typings/nevergrad/: __init__.pyi
.typings/nevergrad/common/: decorators.pyi  errors.pyi  sphere.pyi  tools.pyi  typing.pyi
.typings/nevergrad/functions/: base.pyi  corefuncs.pyi  functionlib.pyi  helpers.pyi  pbt.pyi  utils.pyi
.typings/nevergrad/ops/: __init__.pyi  constraints.pyi
.typings/nevergrad/optimization/: __init__.pyi  base.pyi  callbacks.pyi  differentialevolution.pyi  es.pyi  experimentalvariants.pyi  externalbo.pyi  families.pyi  helpers.pyi  metamodel.pyi  mutations.pyi  oneshot.pyi  optimizerlib.pyi  recaster.pyi  recastlib.pyi  requirements_check.pyi  sequences.pyi  utils.pyi
.typings/nevergrad/parametrization/: _datalayers.pyi  _layering.pyi  choice.pyi  container.pyi  core.pyi  data.pyi  discretization.pyi  helpers.pyi  instantiate.pyi  mutation.pyi  parameter.pyi  transforms.pyi  utils.pyi
.typings/quaternion/: means.pyi  numba_wrapper.pyi  numpy_quaternion.pyi  quaternion_time_series.pyi
.typings/torch/: _C.pyi  _VF.pyi  __config__.pyi  __future__.pyi  __init__.pyi  _appdirs.pyi  _classes.pyi  _compile.pyi  _custom_ops.pyi  _deploy.pyi  _environment.pyi  _guards.pyi  _jit_internal.pyi  _linalg_utils.pyi  _lobpcg.pyi  _lowrank.pyi  _meta_registrations.pyi  _namedtensor_internals.pyi  _ops.pyi  _python_dispatcher.pyi  _size_docs.pyi  _sources.pyi  _storage_docs.pyi  _streambase.pyi  _tensor.pyi  _tensor_docs.pyi  _tensor_str.pyi  _torch_docs.pyi  _utils.pyi  _utils_internal.pyi  _vmap_internals.pyi  _weights_only_unpickler.pyi  functional.pyi  hub.pyi  library.pyi  overrides.pyi  quasirandom.pyi  random.pyi  return_types.pyi  serialization.pyi  (+4 more)
__data__/: database.db
__data__/_hi_prob_dec/: graph.json
__data__/_robogen_build/: _robogen_build.xml
__data__/_robot_w_cpg/: _robot_w_cpg.xml  graph.json
__data__/_robot_w_cpg_learn/: _robot_w_cpg_learn.xml  graph.json
__data__/_robot_w_cpg_learn_and_evolve/: _robot_w_cpg_learn_and_evolve.xml  graph_0.json
doc/resources/: ariel_header.drawio
docs/: .cookiecutter.json  conf.py  index.md  reference.md  requirements.txt  usage.md
docs/source/: ec_course_docs.md  extra_info.md  index.rst  installation_guide.md  myst_ref.md
examples/: 0_render_single_frame.py  1_video_recorder.py  3_docs_example.ipynb  A2_template.py  A3_template.py  _graph_to_robot.py  _hi_prob_dec.py  _hogs_cpg.py  _robogen_build.py  _robot_w_cpg.py  _robot_w_cpg_learn.py  _robot_w_cpg_learn_and_evolve.py  _robot_w_cpg_learn_and_evolve.xml
experiment/: A2_clean.py  A2_experiment.py  A2_np-net.py
source/: GUI.md  conf.py  extra_info.md  index.rst  installation_guide.md
source/contributing_guide/: index.rst
source/introduction_to_modular_robots/: index.rst
src/: requirements.txt
src/ariel/: __init__.py  __main__.py
src/experiment/: A2_template.py
src/revolve/: __init__.py
tests/: __init__.py  test_main.py
typings/astropy/: __init__.pyi  _version.pyi  logger.pyi
typings/cmaes/: __init__.pyi  _stats.pyi  _warm_start.pyi  cma.pyi
typings/mujoco/: _constants.pyi  _render.pyi  _rollout.pyi  _simulate.pyi  _specs.pyi  bindings_test.pyi  memory_leak_test.pyi  msh2obj_test.pyi  rollout_test.pyi
typings/quaternion/: __init__.pyi  calculus.pyi
(+2201 files in other folders)
